Show discovered asset KPI
